update Settings demo to r4.1

--- a/demo/settings/index.html
+++ b/demo/settings/index.html
@@ -11,7 +11,7 @@
         <script defer src="app.js"></script>
     </head>
     <body>
-        <fl-titlebar name="Settings" color="#00CC6A"></fl-titlebar>
+        <fl-titlebar title="Settings" color="#00CC6A"></fl-titlebar>
         <main id="main">
         </main>
     </body>
