TitleBar now sets default color

--- a/src/fl-TitleBar.html
+++ b/src/fl-TitleBar.html
@@ -41,6 +41,11 @@
                     window.history.back();
                 });
             }
+            connectedCallback() {
+                if (!(this.hasAttribute('color'))) {
+                    this.setAttribute('color', '#0078cf');
+                }
+            }
             static get observedAttributes() {
                 return ['title','color'];
             }
